# reference: https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = whisper_ane
version = 0.1.0
author = Rahul Somani
author_email = rahul@ozu.ai
description = ANE optimised adaptation of Whisper for optimised inference
long_description = file: README.md
long_description_content_type = text/markdown
keywords = transformers, ANE, inference, CoreML
license = Private
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7,<4
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    coremltools == 6.2
    torch == 1.11.0
    numpy == 1.22.3
    # ane_transformers @ git+https://github.com/apple/ml-ane-transformers.git
    # whisper @ git+https://github.com/openai/whisper
